@@ -11,6 +11,7 @@ Version 1.2.x (2010-xx-xx)
 	Fixed so files are read using the newer FileReader class if it's available if not it tries the older getAsXXX on Gecko.
 	Fixed bug where IE 9 beta 1 wouldn't render Silverlight properly.
 	Fixed bug where Flash would do extra empty requests if images below a specific size would be uploaded.
+	Fixed bug where Google Gears would resize and re-encode images even if the it wasn't changed in scale.
 Version 1.2.4 (2010-09-08)
 	Added new BeforeUpload event to make it easier to override settings before a file is uploaded.
 	Added new automatic usage of FileReference in Flash if it's possible. Contributed by Marcel Jackwerth.
